--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dompurify": "^3.3.1",
     "embla-carousel-react": "^8.6.0",
     "highlight.js": "^11.11.1",
+    "html2canvas-pro": "^1.6.2",
     "html2pdf.js": "^0.12.1",
     "isomorphic-dompurify": "^2.34.0",
     "lucide-react": "^0.562.0",
@@ -51,5 +52,8 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
+  },
+  "overrides": {
+    "html2canvas": "npm:html2canvas-pro@latest"
   }
 }
