--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dompurify": "^3.3.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.26.2",
+    "gsap": "^3.14.2",
     "highlight.js": "^11.11.1",
     "html2canvas-pro": "^1.6.2",
     "html2pdf.js": "^0.12.1",
