--- a/package.json
+++ b/package.json
@@ -25,17 +25,20 @@
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/typography": "^0.5.19",
     "@tanstack/react-query": "^5.90.12",
+    "@types/figlet": "^1.7.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "colord": "^2.9.3",
     "diff-match-patch": "^1.0.5",
     "dompurify": "^3.3.1",
     "embla-carousel-react": "^8.6.0",
+    "figlet": "^1.9.4",
     "framer-motion": "^12.26.2",
     "gsap": "^3.14.2",
     "highlight.js": "^11.11.1",
